Fixing cross industry agents imports

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -2,14 +2,20 @@ COSMOSDB_ENDPOINT =
 COSMOSDB_KEY = 
 COSMOSDB_DATABASE_NAME = "rminsights"
 COSMOSDB_CONTAINER_CLIENT_NAME = "clientdata"
-COSMOSDB_CONTAINER_USER_NAME = "userdata"
+COSMOSDB_CONTAINER_FSI_INS_USER_NAME = "user_fsi_ins_data"
+COSMOSDB_CONTAINER_FSI_BANK_USER_NAME = "user_fsi_bank_data"
+
 
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_KEY=
-AZURE_OPENAI_MODEL=
+AZURE_OPENAI_MODEL=aga-gpt-4o
 AZURE_OPENAI_API_VERSION="2024-02-01"
 
 AI_SEARCH_ENDPOINT = 
 AI_SEARCH_KEY = 
-AI_SEARCH_INDEX_NAME = 
-AI_SEARCH_SEMANTIC_CONFIGURATION = 
+
+AI_SEARCH_CIO_INDEX_NAME = moneta-cio-vector
+AI_SEARCH_CIO_SEMANTIC_CONFIGURATION = default
+AI_SEARCH_FUNDS_INDEX_NAME = moneta-funds-vector
+AI_SEARCH_FUNDS_SEMANTIC_CONFIGURATION = default
+
