--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -19,3 +19,5 @@ AI_SEARCH_CIO_SEMANTIC_CONFIGURATION = default
 AI_SEARCH_FUNDS_INDEX_NAME = moneta-funds-vector
 AI_SEARCH_FUNDS_SEMANTIC_CONFIGURATION = default
 
+AI_SEARCH_INS_INDEX_NAME =
+AI_SEARCH_INS_SEMANTIC_CONFIGURATION = 
