improvement on the crm agent

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,8 @@
-FUNCTION_APP_URL=localhost:7071
+FUNCTION_APP_URL=http://localhost:7071
+DISABLE_LOGIN="True"
+#only use if you configure an app registration and auth with msal
+AZ_TENANT_ID=
+AZ_REG_APP_CLIENT_ID=
+AZ_REG_APP_SCOPE=User.Read
 WEB_REDIRECT_URI=http://localhost:8501/
+
