error handling and bicep updates for agents RAG

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -21,3 +21,5 @@ AI_SEARCH_FUNDS_SEMANTIC_CONFIGURATION = default
 
 AI_SEARCH_INS_INDEX_NAME =
 AI_SEARCH_INS_SEMANTIC_CONFIGURATION = 
+
+AI_SEARCH_VECTOR_FIELD_NAME = contentVector
