--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -9,7 +9,7 @@ COSMOSDB_CONTAINER_FSI_BANK_USER_NAME = "user_fsi_bank_data"
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_KEY=
 AZURE_OPENAI_MODEL=aga-gpt-4o
-AZURE_OPENAI_API_VERSION="2024-02-01"
+AZURE_OPENAI_API_VERSION="2024-08-01-preview"
 
 AI_SEARCH_ENDPOINT = 
 AI_SEARCH_KEY = 
