data upload and indexing

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -10,6 +10,10 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_KEY=
 AZURE_OPENAI_MODEL=aga-gpt-4o
 AZURE_OPENAI_API_VERSION="2024-08-01-preview"
+AZURE_OPENAI_EMBEDDING_MODEL_NAME="text-embedding-3-large"
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT = "text-embedding-3-large"
+AZURE_OPENAI_EMBEDDING_DIMENSIONS= 1536
+CHUNCK_SIZE=2000
 
 AI_SEARCH_ENDPOINT = 
 AI_SEARCH_KEY = 
@@ -23,3 +27,10 @@ AI_SEARCH_INS_INDEX_NAME =
 AI_SEARCH_INS_SEMANTIC_CONFIGURATION = 
 
 AI_SEARCH_VECTOR_FIELD_NAME = contentVector
+
+#Equals "https://{ACCOUNTNAME}.blob.core.windows.net"
+BLOB_ACCOUNT_URL= 
+#If you set up a managed identity for Azure AI Search for the connection, the connection string includes a ResourceId= suffix. It should look similar to the following example: "ResourceId=/subscriptions/FAKE-SUBCRIPTION=ID/resourceGroups/FAKE-RESOURCE-GROUP/providers/Microsoft.Storage/storageAccounts/FAKE-ACCOUNT;"
+# If you use key based access the Blob Connection String will contain the key
+BLOB_CONNECTION_STRING=
+BLOB_ACCOUNT_KEY=
