--- a/src/backend/sample.env
+++ b/src/backend/sample.env
@@ -6,8 +6,8 @@ COSMOSDB_CONTAINER_FSI_BANK_USER_NAME="user_fsi_bank_data"
 
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_KEY=
-AZURE_OPENAI_API_VERSION="2024-08-01-preview"
-AZURE_OPENAI_DEPLOYMENT_NAME=aga-gpt-4o
+AZURE_OPENAI_DEPLOYMENT_NAME=
+AZURE_OPENAI_API_VERSION=2024-10-21
 
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT="text-embedding-3-large"
 AZURE_OPENAI_EMBEDDING_MODEL_NAME="text-embedding-3-large"
@@ -17,6 +17,8 @@ CHUNCK_SIZE=2000
 AI_SEARCH_ENDPOINT=
 
 AI_SEARCH_CIO_INDEX_NAME=moneta-cio-vector
+AI_SEARCH_CIO_SEMANTIC_CONFIGURATION
+
 AI_SEARCH_FUNDS_INDEX_NAME=moneta-funds-vector
 AI_SEARCH_FUNDS_SEMANTIC_CONFIGURATION=default
 
@@ -24,3 +26,6 @@ AI_SEARCH_INS_INDEX_NAME=
 AI_SEARCH_INS_SEMANTIC_CONFIGURATION=
 
 AI_SEARCH_VECTOR_FIELD_NAME=contentVector
+
+# Optional
+HANDLER_TYPE=semantickernel    # [semantickernel, vanilla] defaults to semantickernel
