--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -8,7 +8,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt  
   
 # Copy the application code  
-COPY *.py .  
+COPY *.py ./  
 COPY gbb /app/gbb
 COPY sk /app/sk
   
