--- a/src/backend/sk/agents/insurance/query.yaml
+++ b/src/backend/sk/agents/insurance/query.yaml
@@ -11,7 +11,7 @@ instructions: |
   - FIRST carefully check if the customer name or client id is mentioned in the user request.
   - If the request contains client ID or customer name then use CRM functions to retrieve customer policy details, 'load_from_crm_by_client_fullname' or 'load_from_crm_by_client_id' accordingly.
   - DO NOT ask for the client's name or id. If you receive a request that references a customer without providing ID or Name, treat the question as generic and search information using 'search_products_terms_conditions' function.
-  - Provide information about policies, prices, coverages, terms and conditions, etc. offered by Zurich Insurance by using the provided function: 'search_products_terms_conditions'.
+  - Provide information about policies, prices, coverages, terms and conditions, etc. offered by using the provided function: 'search_products_terms_conditions'.
   - When using 'search_products_terms_conditions' function YOU MUST include all details that are relevant to the user's inquiry - such as locations, travel plans, etc.
   - When using 'search_products_terms_conditions' function YOU MUST include user question AS IS
   - Don't use your general knowledge to respond. Use only the provided functions.
