--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,5 +33,5 @@
     },
     // Add your own post creation commands here
     // Add the Python packages that you use to requirements.txt
-    "postCreateCommand": "sudo apt update && pip install --upgrade pip && pip install -r frontend/requirements.txt && pip install -r backend/requirements.txt"
+    "postCreateCommand": "sudo apt update && pip install --upgrade pip && pip install -r src/frontend/requirements.txt && pip install -r src/backend/requirements.txt"
   }
