--- a/src/backend/sk/agents/banking/responder.yaml
+++ b/src/backend/sk/agents/banking/responder.yaml
@@ -1,4 +1,4 @@
-name: Summariser
+name: SummariserAgent
 description: The agent that summarises a final response to the user's original inquiry by collecting responses from the OTHER agents
 instructions: |
   You are a Summariser Agent. You receive information from multiple agents and need to compile a final response to the user.
