Updated documentaion and sample.env

--- a/src/backend/sample.env
+++ b/src/backend/sample.env
@@ -22,5 +22,16 @@ AI_SEARCH_INS_INDEX_NAME=ins-index
 
 AI_SEARCH_VECTOR_FIELD_NAME=contentVector
 
+# Observability through AI Foundry tracing
+APPLICATIONINSIGHTS_CONNECTION_STRING="InstrumentationKey=..."
+AZURE_RESOURCE_GROUP="rg-..."
+
+# To be able to trace the multi agent chat execution in Azure AI FOUNDRY
+SEMANTICKERNEL_EXPERIMENTAL_GENAI_ENABLE_OTEL_DIAGNOSTICS=True
+SEMANTICKERNEL_EXPERIMENTAL_GENAI_ENABLE_OTEL_DIAGNOSTICS_SENSITIVE=True
+
+# Using RBAC to access Azure Services
+AZURE_CLIENT_ID=""
+
 # Optional
 HANDLER_TYPE=semantickernel    # [semantickernel, vanilla] defaults to semantickernel
