--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -22,4 +22,5 @@ dependencies = [
     "requests-html>=0.10.0",
     "lxml-html-clean>=0.4.1",
    "pandas>=2.2.3",
+   "azure-ai-projects>=1.0.0b11"
 ]
